[NEXUS-7707, NEXUS-7711] update fonts for error/content/describe pages

--- a/components/nexus-core/src/main/resources/static/css/nexus-error.css
+++ b/components/nexus-core/src/main/resources/static/css/nexus-error.css
@@ -12,7 +12,7 @@
  */
 
 body {
-  font-family: arial, tahoma, verdana, helvetica, sans-serif;
+  font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #ffffff;
   margin: 0;
   padding: 0;
