--- a/plugins/basic/nexus-content-plugin/src/main/resources/static/css/nexus-content.css
+++ b/plugins/basic/nexus-content-plugin/src/main/resources/static/css/nexus-content.css
@@ -12,7 +12,7 @@
  */
 
 body {
-  font-family: arial, tahoma, verdana, helvetica, sans-serif;
+  font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #ffffff;
   margin: 0;
   padding: 0;
