Implements the master/detail pattern across the rest of the console

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -74,7 +74,7 @@
   $ui: 'masterdetail-tabs',
 
   $ui-header-color: $color-night-rider,
-  $ui-header-background-color: $color-light-smoke,
+  $ui-header-background-color: $color-white,
   $ui-header-font-size: 16px,
   $ui-header-line-height: 20px
 );
