--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
@@ -99,7 +99,7 @@
 
   $ui-border-width: 0px,
   $ui-padding: 0px,
-  $ui-background-color: $color-light-smoke,
+  $ui-background-color: $color-white,
   $ui-background-gradient: $tabbar-background-gradient
 
   //$ui-scroller-width: $tabbar-scroller-width,
