Reduces the size of the header in messages

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
@@ -5,13 +5,19 @@
 @include extjs-window-ui(
   $ui: 'message-default',
 
-  $ui-padding: 10px
+  $ui-padding: 10px,
+  $ui-header-line-height: 15px,
+  $ui-header-font-size: $font-size-h5,
+  $ui-header-font-weight: $font-weight-h5
 );
 
 @include extjs-window-ui(
   $ui: 'message-primary',
 
   $ui-padding: 10px,
+  $ui-header-line-height: 15px,
+  $ui-header-font-size: $font-size-h5,
+  $ui-header-font-weight: $font-weight-h5,
   $ui-tool-background-image: 'tools/tool-sprites',
   $ui-header-color: $color-white,
   $ui-header-background-color: $color-cobalt
@@ -21,6 +27,9 @@
   $ui: 'message-danger',
 
   $ui-padding: 10px,
+  $ui-header-line-height: 15px,
+  $ui-header-font-size: $font-size-h5,
+  $ui-header-font-weight: $font-weight-h5,
   $ui-tool-background-image: 'tools/tool-sprites',
   $ui-header-color: $color-white,
   $ui-header-background-color: $color-cerise
@@ -30,6 +39,9 @@
   $ui: 'message-warning',
 
   $ui-padding: 10px,
+  $ui-header-line-height: 15px,
+  $ui-header-font-size: $font-size-h5,
+  $ui-header-font-weight: $font-weight-h5,
   $ui-tool-background-image: 'tools/tool-sprites',
   $ui-header-color: $color-white,
   $ui-header-background-color: $color-sun
@@ -39,6 +51,9 @@
   $ui: 'message-success',
 
   $ui-padding: 10px,
+  $ui-header-line-height: 15px,
+  $ui-header-font-size: $font-size-h5,
+  $ui-header-font-weight: $font-weight-h5,
   $ui-tool-background-image: 'tools/tool-sprites',
   $ui-header-color: $color-white,
   $ui-header-background-color: $color-pigment-green
