Lightens the background color of drilldown detail messages

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -24,6 +24,13 @@
   }
 }
 
+@include extjs-panel-ui(
+  $ui: 'nx-drilldown-message',
+
+  $ui-header-background-color: $color-white,
+  $ui-header-color: $color-night-rider
+);
+
 /**
  * ui: 'settings-panel'
  */
