--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -8,7 +8,7 @@
 @include extjs-panel-ui(
   $ui: 'feature-content',
 
-  $ui-header-padding: 4px 10px 5px,
+  $ui-header-padding: 10px 8px 6px 10px,
   $ui-header-background-color: $color-white,
   $ui-header-icon-height: 32,
   $ui-header-icon-width: 32,
