Fixes drilldown bugs
+ Reset the bookmark when a model is deleted
+ Clear stale data in create screens
+ Fix error on cancel when adding a new SSL trusted key
+ Restore tab navigation (clicking the “back” button goes to the previous tab)
+ Detail tabs for task don’t disappear on refresh
+ “About” tab for capability is populated on refresh
+ Restores broken “Change password” functionality

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -110,18 +110,6 @@
 }
 
 /**
- * ui: 'drilldown-tabs'
- */
-/*@include extjs-panel-ui(
-  $ui: 'drilldown-tabs',
-
-  $ui-header-color: $color-night-rider,
-  $ui-header-background-color: $color-white,
-  $ui-header-font-size: 16px,
-  $ui-header-line-height: 20px
-);*/
-
-/**
  * ui: 'nx-messages'
  */
 @include extjs-panel-ui(
@@ -161,19 +149,7 @@
     margin-bottom: 20px;
   }
 
-  .category {
-    /*padding-bottom: 2em;
-    border-bottom: 1px $color-gainsboro solid;
-
-    .category-title {
-      text-transform: uppercase;
-      padding-bottom: 1em;
-      font-size: $font-size-h3;
-    }*/
-  }
-
-  .nx-section-header/*,
-  .column-header*/ {
+  .nx-section-header {
     font-size: $font-size-h5;
     padding-bottom: 5px;
     text-transform: uppercase;
