--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -4327,33 +4327,54 @@
 /**
  * cls: 'modebutton'
  */
-/* line 292, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 291, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+.nx-modebutton {
+  padding: 6px 0 0 0;
+  color: white;
+}
+/* line 295, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+.nx-modebutton .x-btn-glyph {
+  font-size: 24px;
+}
+
+/* line 300, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+.nx-modebutton + .nx-caret {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+/* line 306, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton:hover,
 .nx-modebutton:focus {
   background-color: #dddddd;
 }
-/* line 295, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 309, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton:hover .x-btn-inner,
 .nx-modebutton:focus .x-btn-inner {
   color: #006bbf;
 }
-/* line 299, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 313, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton:hover .x-btn-glyph,
 .nx-modebutton:focus .x-btn-glyph {
   color: #006bbf;
 }
 
-/* line 304, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 318, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton.x-pressed {
   background-color: #006bbf;
 }
-/* line 307, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 321, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton.x-pressed .x-btn-inner {
   color: white;
 }
-/* line 311, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+/* line 325, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
 .nx-modebutton.x-pressed .x-btn-glyph {
   color: white;
+}
+
+/* line 330, ../../../baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss */
+.nx-modebutton.x-pressed + .nx-caret {
+  border-bottom: 5px solid white;
 }
 
 /**
