--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
@@ -295,6 +295,20 @@
   .x-btn-glyph {
     font-size: 24px;
   }
+
+  &.x-icon-text-left {
+    .x-btn-inner {
+      line-height: 25px !important;
+      font-size: 15px;
+      padding-left: 36px;
+      padding-right: 10px;
+    }
+
+    .x-btn-glyph {
+      text-align: left;
+      padding-left: 10px;
+    }
+  }
 }
 
 .nx-modebutton + .nx-caret {
