--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
@@ -26,6 +26,12 @@ $button-small-font-weight-focus: $font-weight-body;
 $button-small-font-weight-pressed: $font-weight-body;
 $button-small-font-weight-disabled: $font-weight-body;
 
+$button-medium-font-weight: $font-weight-body;
+$button-medium-font-weight-over: $font-weight-body;
+$button-medium-font-weight-focus: $font-weight-body;
+$button-medium-font-weight-pressed: $font-weight-body;
+$button-medium-font-weight-disabled: $font-weight-body;
+
 $button-default-glyph-color: $color-white;
 $button-default-glyph-opacity: 1;
 
