NEXUS-7962 Forces the tab panel body to sit underneath the tab bar

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
@@ -93,3 +93,8 @@
 .x-tab-nx-light-top-over {
   border-bottom: 1px solid $color-smoke;
 }
+
+// Force the tab panel body to sit underneath the tab bar
+.x-tab-bar + .x-panel-body {
+  z-index: 0;
+}
