--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -17189,6 +17189,11 @@
   border-bottom: 1px solid #ebebeb;
 }
 
+/* line 98, ../../../baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss */
+.x-tab-bar + .x-panel-body {
+  z-index: 0;
+}
+
 /**
  * @class Ext.tree.Panel
  */
