NEXUS-7725 Shortens fields in the change password dialog

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -70,7 +70,7 @@
 @include extjs-panel-ui(
   $ui: 'nx-inset',
 
-  $ui-padding: 12px 0 0 12px
+  $ui-padding: 12px 12px 0 12px
 );
 
 .x-panel-nx-inset {
