NEXUS-7718 Gives read-only fields distinctive styling

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -14465,6 +14465,19 @@
 }
 
 /**
+ * @class Ext.form.field.Base
+ */
+/**
+ * Style for read-only fields
+ *
+ * cls: 'x-form-readonly'
+ */
+/* line 11, ../../../baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss */
+.x-form-field[readonly="readonly"] {
+  background-color: #ebebeb;
+}
+
+/**
  * @class Ext.form.Fieldset
  */
 /* line 5, ../../../baseapp/packages/rapture-theme/sass/src/Ext/form/Fieldset.scss */
