[NEXUS-7718] Read-only fields should appear read-only
+ Makes readonly exceptions for log viewer textarea, field containers
+ Removes readonly treatment from combo boxes

Fixes #1030

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
@@ -8,6 +8,16 @@
  * cls: 'x-form-readonly'
  */
 
-.x-form-field[readonly="readonly"] {
+.x-form-field[readonly="readonly"].x-form-field:not([role="combobox"]) {
+  color: $color-dark-gray;
   background-color: $color-smoke;
+}
+
+.nx-log-viewer-field textarea {
+  background-color: $color-white !important;
+}
+
+.x-form-fieldcontainer .x-mask {
+  background-color: $color-gainsboro;
+  opacity: 0.6;
 }
