[NEXUS-7758] Consolidate tabs that are light on content
Fixes #1031

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss
@@ -21,3 +21,22 @@
   background-color: $color-gainsboro;
   opacity: 0.6;
 }
+
+/**
+ * Styles which allow for horizontal alignment of form fields
+ */
+
+.nx-float-left {
+  position: relative;
+  float: left !important;
+  margin-right: 5px;
+}
+
+.nx-interstitial-label {
+  font-size: 13px;
+  padding-top: 5px;
+}
+
+.nx-clear-both {
+  clear: both;
+}
