[NEXUS-8115] Uses a modal instead of drilldown to mark the log

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
@@ -60,7 +60,12 @@
 );
 
 
-/* Fixed modals for the visual style guide */
+// Fixed modals for the visual style guide
 .fixed-modal {
   top: 0 !important;
+}
+
+// Remove footer toolbar spacing
+.x-window-body .x-toolbar-footer {
+  padding-left: 0 !important;
 }
