--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -14458,10 +14458,14 @@
   border-width: 2px !important;
 }
 
-/* Fixed modals for the visual style guide */
 /* line 64, ../../../baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss */
 .fixed-modal {
   top: 0 !important;
+}
+
+/* line 69, ../../../baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss */
+.x-window-body .x-toolbar-footer {
+  padding-left: 0 !important;
 }
 
 /**
